// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD_ACCOUNT 1`] = `
Object {
  "users": Array [
    Object {
      "access_token": "token code for No.1",
      "access_token_secret": "secret code for No.1",
      "id": "1",
      "name": "name",
      "profile_image_url": "image url",
      "screen_name": "screen name",
    },
  ],
  "verifier": "",
}
`;

exports[`CHANGE_VERIFIER 1`] = `
Object {
  "users": Array [],
  "verifier": "authentication code",
}
`;

exports[`REMOVE_ACCOUNT 1`] = `
Object {
  "users": Array [
    Object {
      "access_token": "token code for No.2",
      "access_token_secret": "secret code for No.2",
      "id": "2",
      "name": "name",
      "profile_image_url": "image url",
      "screen_name": "screen name",
    },
    Object {
      "access_token": "token code for No.4",
      "access_token_secret": "secret code for No.4",
      "id": "4",
      "name": "name",
      "profile_image_url": "image url",
      "screen_name": "screen name",
    },
  ],
  "verifier": "",
}
`;
